<?xml version="1.0" encoding="UTF-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:facebook="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent" >
            
	        <com.facebook.ProfilePictureView
	            android:id="@+id/selection_profile_pic"
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:layout_gravity="center"
	            android:gravity="center_horizontal"
	            facebook:preset_size="normal" />
	        
	    	<TextView
	            android:id="@+id/selection_user_name"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"
	            android:layout_gravity="center"
	            android:textColor="#333"
	            android:textSize="18sp" />
    	
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/college"
                android:textSize="20sp" />
	        
	        
	        <TextView
	            android:id="@+id/collegeName"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" />
	        
        </LinearLayout>

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/classes_and_sessions"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1" >

            <ListView
                android:id="@+id/classes_and_sessions_list"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1" >
            </ListView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/done_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/done" />

        </LinearLayout>

    </LinearLayout>
